# ai-agent-apps

./: .env.example  .gitignore  AGENTS.md  README.md  app.yaml  databricks.yml  pyproject.toml
.claude/: settings.local.json
agent_server/: agent.py  db.py  evaluate_agent.py  scorers.py  start_server.py  utils.py  utils_memory.py
notebooks/: 05-setup-uc-trace-location.py  config.py
notebooks/02-agent-eval/: agent.py  agent_config.yaml
notebooks/03-knowledge-base-rag/: 03.1-pdf-rag-tool.py
notebooks/04-offline-eval/: 04.1_batch_evaluation.py
notebooks/_global_resources/: 00-global-setup-v2.py
notebooks/_resources/: 01-setup.py  04-eval-dataset-generation.py  05-eval-dataset-faq-generation.py
scripts/: start_app.py
